--- a/css/global.css
+++ b/css/global.css
@@ -95,6 +95,7 @@ footer span i {
 
 .fade {
   animation-name: fade;
+  animation-name: fade;
   animation-duration: 1000ms;
   animation-timing-function: ease;
 }
