--- a/css/global.css
+++ b/css/global.css
@@ -62,6 +62,7 @@ footer {
   font-weight: normal;
   font-size: 16px;
   line-height: 24px;
+  padding: 0 16px;
   color: rgba(17, 17, 17, 0.48);
 
   display: flex;
