--- a/css/gifts.css
+++ b/css/gifts.css
@@ -51,6 +51,7 @@
   position: relative;
   cursor: not-allowed;
   opacity: 0.3;
+  pointer-events: none;
 }
 
 .gift-sold::after {
@@ -78,13 +79,16 @@
 }
 
 .gift-button button {
-  background: #6e41e2 !important;
+  border: 2px solid #66b7dd !important;
+  color: #66b7dd !important;
+  background: transparent !important;
   border-radius: 4px !important;
   width: 100%;
 }
 
 .gift-button button:hover {
-  background: #5835b0 !important;
+  background: #66b7dd !important;
+  color: white !important;
 }
 
 #gifts-button-loader {
@@ -92,7 +96,7 @@
   margin-top: 0;
   display: flex;
   justify-content: center;
-  background: #6e41e2;
+  background: #88cbeb;
   border-radius: 4px;
   border: none;
   cursor: pointer;
