--- a/css/gifts.css
+++ b/css/gifts.css
@@ -20,7 +20,7 @@
   display: flex;
   flex-direction: column;
   padding: 0.5rem;
-  box-shadow: 2px 2px 12px 0px rgba(0, 0, 0, 0.5);
+  border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 0.5rem;
   gap: 12px;
   cursor: pointer;
@@ -29,12 +29,11 @@
   flex: 1 1 calc(33% - 4rem);
   transition: ease-in-out 150ms all;
   min-width: 144px;
-  /* background: #eaf9ff; */
 }
 
 .gift:hover {
-  /* background: #c7e5f3; */
-  background: #f5f5f5;
+  background: #eaf8ff;
+  box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
 }
 
 .gift img {
