--- a/css/global.css
+++ b/css/global.css
@@ -1,4 +1,10 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Playball&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+
+@font-face {
+  font-family: "Notera";
+  src: url("../assets/fonts/notera.woff") format("woff"),
+    url("../assets/fonts/notera.ttf") format("truetype");
+}
 
 body {
   background-color: #f3fafd;
@@ -11,6 +17,7 @@ body {
   padding: 16px 48px;
   box-shadow: 0px 2px 4px rgba(17, 17, 17, 0.1);
   width: -webkit-fill-available;
+  background: #ffffff;
 
   font-family: Roboto, sans-serif;
   font-style: normal;
@@ -89,6 +96,7 @@ footer {
   line-height: 24px;
   padding: 0 16px;
   color: rgba(17, 17, 17, 0.48);
+  background: #ffffff;
 
   display: flex;
   align-items: center;
@@ -152,7 +160,7 @@ footer span i {
   }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 720px) {
   main {
     padding: 24px 16px;
   }
@@ -163,5 +171,14 @@ footer span i {
 
   .navigation a {
     padding: 10px 0;
+  }
+
+  .navigation ul li a {
+    padding: 0.5rem;
+    font-size: 0.75rem;
+  }
+
+  footer {
+    font-size: 0.75rem;
   }
 }
